--- a/PessoaFrontend/src/app/app.component.html
+++ b/PessoaFrontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 
-<h1 style="text-align: center; margin: 20px 0;">Sistema de Gerenciamento de Pessoas</h1>
+<!-- <h1 style="text-align: center; margin: 20px 0;">Sistema de Gerenciamento de Pessoas</h1> -->
 <div class="container">
 
   <!-- Formulário para adicionar/editar pessoas -->
-  <app-pessoa-form></app-pessoa-form>
+  <!-- <app-pessoa-form></app-pessoa-form> -->
 
   <!-- Tabela com lista de pessoas -->
   <app-pessoa-list></app-pessoa-list>
