--- a/PessoaFrontend/src/app/pessoa-list/pessoa-list.component.html
+++ b/PessoaFrontend/src/app/pessoa-list/pessoa-list.component.html
@@ -1,61 +1,117 @@
+<div class="container mt-4">
+  <h2 class="text-center mb-4">Sistema de Gerenciamento de Pessoas</h2>
 
-<div class="mat-elevation-z8">
+  <button class="btn btn-primary mb-3" (click)="openAddModal()">
+    ➕ Adicionar Pessoa
+  </button>
 
-  <table mat-table [dataSource]="dataSource" class="mat-table-custom">
+  <div class="table-responsive">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- Nome -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.nome }}</td>
+      </ng-container>
 
-    <!-- Coluna Nome -->
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let pessoa"> {{ pessoa.nome }} </td>
-    </ng-container>
+      <!-- Idade -->
+      <ng-container matColumnDef="idade">
+        <th mat-header-cell *matHeaderCellDef>Idade</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.idade }}</td>
+      </ng-container>
 
-    <!-- Coluna Idade -->
-    <ng-container matColumnDef="idade">
-      <th mat-header-cell *matHeaderCellDef> Idade </th>
-      <td mat-cell *matCellDef="let pessoa"> {{ pessoa.idade }} </td>
-    </ng-container>
+      <!-- Estado Civil -->
+      <ng-container matColumnDef="estadoCivil">
+        <th mat-header-cell *matHeaderCellDef>Estado Civil</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.estadoCivil }}</td>
+      </ng-container>
 
-    <!-- Coluna Estado Civil -->
-    <ng-container matColumnDef="estadoCivil">
-      <th mat-header-cell *matHeaderCellDef> Estado Civil </th>
-      <td mat-cell *matCellDef="let pessoa"> {{ pessoa.estadoCivil }} </td>
-    </ng-container>
+      <!-- CPF -->
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef>CPF</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.cpf }}</td>
+      </ng-container>
 
-    <!-- Coluna CPF -->
-    <ng-container matColumnDef="cpf">
-      <th mat-header-cell *matHeaderCellDef> CPF </th>
-      <td mat-cell *matCellDef="let pessoa"> {{ pessoa.cpf }} </td>
-    </ng-container>
+      <!-- Cidade -->
+      <ng-container matColumnDef="cidade">
+        <th mat-header-cell *matHeaderCellDef>Cidade</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.cidade }}</td>
+      </ng-container>
 
-    <!-- Coluna Cidade -->
-    <ng-container matColumnDef="cidade">
-      <th mat-header-cell *matHeaderCellDef> Cidade </th>
-      <td mat-cell *matCellDef="let pessoa"> {{ pessoa.cidade }} </td>
-    </ng-container>
+      <!-- Estado -->
+      <ng-container matColumnDef="estado">
+        <th mat-header-cell *matHeaderCellDef>Estado</th>
+        <td mat-cell *matCellDef="let pessoa">{{ pessoa.estado }}</td>
+      </ng-container>
 
-    <!-- Coluna Estado -->
-    <ng-container matColumnDef="estado">
-      <th mat-header-cell *matHeaderCellDef class="mat-column-estado"> Estado </th>
-      <td mat-cell *matCellDef="let pessoa" class="mat-column-estado"> {{ pessoa.estado }} </td>
-    </ng-container>
+      <!-- Ações -->
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let pessoa">
+          <div class="d-flex gap-2 justify-content-center">
+            <button class="btn btn-outline-light"(click)="openEditModal(pessoa)">✏️</button>
+            <button class="btn btn-outline-light" (click)="delete(pessoa.id)">🗑️</button>
+          </div>
+        </td>
+      </ng-container>
 
-    <!-- Coluna Ações -->
-    <ng-container matColumnDef="acoes" class="mat-column-acoes">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let pessoa">
-        <button mat-icon-button color="primary" (click)="editPessoa(pessoa)">
-          <mat-icon>edit</mat-icon>
-        </button>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 
-        <button mat-icon-button color="warn" (click)="deletePessoa(pessoa.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+  <!-- Paginação -->
+  <mat-paginator
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+  >
+  </mat-paginator>
 </div>
+
+<!-- <div class="container mt-4">
+  <h2 class="text-center mb-4">Sistema de Gerenciamento de Pessoas</h2>
+
+  <button class="btn btn-primary mb-3" (click)="openAddModal()">
+    ➕ Add
+  </button>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered text-center align-middle">
+      <thead class="table-dark">
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Marital Status</th>
+          <th>CPF</th>
+          <th>City</th>
+          <th>States</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let pessoa of pessoas">
+          <td>{{ pessoa.nome }}</td>
+          <td>{{ pessoa.idade }}</td>
+          <td>{{ pessoa.estadoCivil }}</td>
+          <td>{{ pessoa.cpf }}</td>
+          <td>{{ pessoa.cidade }}</td>
+          <td>{{ pessoa.estado }}</td>
+          <td>
+            <button
+              class="btn btn-sm btn-warning me-2"
+              (click)="openEditModal(pessoa)"
+            >
+              ✏️ Edit
+            </button>
+            <button
+              class="btn btn-sm btn-danger"
+              (click)="delete(pessoa.id)"
+            >
+              🗑️ Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div> -->
